fix(material/form-field): dynamic hint end alignment not working (#20657)
Binding to the `align` property of `mat-hint` didn't work, because while we were adding
a class, the class wasn't being used. Using a static value works by accident.

Fixes #20629.

--- a/src/material-experimental/mdc-form-field/form-field.scss
+++ b/src/material-experimental/mdc-form-field/form-field.scss
@@ -58,6 +58,10 @@
   box-sizing: border-box;
 }
 
+.mat-mdc-form-field-hint-end {
+  order: 1;
+}
+
 // In order to make it possible for developers to disable animations for form-fields,
 // we only activate the animation styles if animations are not explicitly disabled.
 .mat-mdc-form-field:not(.mat-form-field-no-animations) {
