--- a/src/material/form-field/form-field.scss
+++ b/src/material/form-field/form-field.scss
@@ -230,6 +230,10 @@ $mat-form-field-default-infix-width: 180px !default;
   position: relative;
 }
 
+.mat-form-field-hint-end {
+  order: 1;
+}
+
 .mat-form-field._mat-animation-noopable {
   .mat-form-field-label,
   .mat-form-field-ripple {
